增加了Hold功能，当给某个界面发送EventMail的时候，如果这个界面不不存在，可以把信息存储进来，等那个界面主动来拿

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -15,4 +15,16 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="从UI线程发送" />
+
+    <Button
+        android:id="@+id/button_three"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="给SecondActivity发送数据" />
+
+    <Button
+        android:id="@+id/button_four"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="打开SecondActivity" />
 </LinearLayout>
